syntax = "proto3";
package mathing;

import "item_row.proto";

message ItemCreate {
  string name = 1;
  float price = 2;
}

message ItemCreateRequest {
  repeated ItemCreate items = 1;
}

message ItemCreateResponse {
  repeated ItemRow items = 1;
}
